--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -85,17 +85,7 @@ button {
   justify-content: center;
   align-items: center;
 }
-.value {
-  font-size: 40px;
-  line-height: 1.2;
-  color: #2e2f42;
-}
-.label {
-  font-size: 16px;
-  line-height: 1.5;
-  color: #2e2f42;
-  text-transform: capitalize;
-}
+
 /* #endregion */
 /* #region Timer */
 input:hover {
@@ -112,10 +102,19 @@ input:disabled {
 }
 button#start-button:hover {
   background: #6c8cff;
+  color: #fff;
 }
 button#start-button:disabled {
   background: #cfcfcf;
   color: #989898;
+}
+.value {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 1.2;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
 }
 .input-wraper {
 }
@@ -123,8 +122,12 @@ button#start-button:disabled {
 }
 .field {
 }
-.value {
-}
+
 .label {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #2e2f42;
+  text-transform: capitalize;
 }
 /* #endregion */
