--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -86,8 +86,6 @@ button {
   align-items: center;
 }
 
-/* #endregion */
-/* #region Timer */
 input:hover {
   border: 1px solid #000;
   color: #2e2f42;
@@ -107,6 +105,10 @@ button#start-button:hover {
 button#start-button:disabled {
   background: #cfcfcf;
   color: #989898;
+}
+button#start-button {
+  background: #4e75ff;
+  color: #fff;
 }
 .value {
   font-family: 'Montserrat', sans-serif;
@@ -129,5 +131,57 @@ button#start-button:disabled {
   line-height: 1.5;
   color: #2e2f42;
   text-transform: capitalize;
+}
+.iziToast-close {
+  color: rgb(255, 255, 255) !important; /* Змінює колір хрестика на червоний */
+}
+/* #endregion */
+/* #region Form */
+.form {
+  margin: 36px auto;
+}
+.delay-label {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin-bottom: 16px;
+}
+.delay-input {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+}
+.delay-input:hover {
+  border: 1px solid #000;
+  border-radius: 4px;
+}
+.delay-input:active {
+  border: 1px solid #4e75ff;
+}
+fieldset {
+  width: 360px;
+  margin-bottom: 24px;
+}
+.state-input {
+  border-radius: 4px;
+  stroke-width: 1px;
+  stroke: #808080;
+}
+.state-input:hover {
+  stroke: #000;
+}
+.state-input:active {
+  stroke: #000;
+}
+.submit-button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 360px;
+  height: 40px;
+  background: #4e75ff;
+}
+.submit-button:hover {
+  background: #6c8cff;
 }
 /* #endregion */
